Crash when trying to load custom preview in asset browser with user library selected #93691

Closed
opened 2021-12-05 10:56:01 +01:00 by Magnus Pettersson · 12 comments

System Information
Operating system: Windows-10-10.0.18363-SP0 64 Bits
Graphics card: Quadro #1000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.77

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes when trying to load a custom preview image when "User Library" is selected instead of "Current File"

Exact steps for others to reproduce the error

  1. Open Blender - New File - General
  2. Open Asset Browser
  3. Make the default cube an asset
  4. Save the .blend file to the asset library folder
  5. Switch from "Local File" to "User Library"
  6. Select the newly created cube asset
  7. Try to Load Custom Preview image (any image) from the asset folder

Crash

**System Information** Operating system: Windows-10-10.0.18363-SP0 64 Bits Graphics card: Quadro #1000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.77 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes when trying to load a custom preview image when "User Library" is selected instead of "Current File" **Exact steps for others to reproduce the error** 1. Open Blender - New File - General 2. Open Asset Browser 3. Make the default cube an asset 4. Save the .blend file to the asset library folder 5. Switch from "Local File" to "User Library" 6. Select the newly created cube asset 7. Try to Load Custom Preview image (any image) from the asset folder Crash

Added subscriber: @magnusinmexico

Added subscriber: @magnusinmexico

#93956 was marked as duplicate of this issue

#93956 was marked as duplicate of this issue

#93791 was marked as duplicate of this issue

#93791 was marked as duplicate of this issue

Added subscriber: @flo08

Added subscriber: @flo08
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Can confirm the crash on master: 5ef5a9fc24668aa264fe0558db9c0fb1246aa37f

>	blender.exe!BKE_previewimg_id_get_p(const ID * id) Line 362	C++

 	blender.exe!BKE_previewimg_id_custom_set(ID * id, const char * path) Line 418	C++
 	blender.exe!lib_id_load_custom_preview_exec(bContext * C, wmOperator * op) Line 96	C++
 	blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Line 2552	C
 	blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) Line 2651	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3128	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3180	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3670	C
 	blender.exe!WM_main(bContext * C) Line 657	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562	C
Hi, thanks for the report. Can confirm the crash on master: `5ef5a9fc24668aa264fe0558db9c0fb1246aa37f` ``` > blender.exe!BKE_previewimg_id_get_p(const ID * id) Line 362 C++ blender.exe!BKE_previewimg_id_custom_set(ID * id, const char * path) Line 418 C++ blender.exe!lib_id_load_custom_preview_exec(bContext * C, wmOperator * op) Line 96 C++ blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Line 2552 C blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) Line 2651 C blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3128 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3180 C blender.exe!wm_event_do_handlers(bContext * C) Line 3670 C blender.exe!WM_main(bContext * C) Line 657 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562 C ```

Added subscriber: @sleepyhead

Added subscriber: @sleepyhead

This issue was referenced by 88f8b01e66

This issue was referenced by 88f8b01e669db8877bed87e1d2fc9ad5e4d885a0

This issue was referenced by 5ce1c63e1b

This issue was referenced by 5ce1c63e1bf0f04509f08e835f8180fe2b4242ea
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2021-12-09 15:53:11 +01:00
Member

Added subscribers: @tomwanted, @Garek

Added subscribers: @tomwanted, @Garek
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93691
No description provided.